test/black-box/v14/3.exp
[Line 15] Semantic error: Attribute galhos is private.
