test/black-box/v14/3.toc
# Exemplo de objetos em TOC
obj Arvore(int galhos)
  prv int galhos = galhos
  pub int frutas = 0


  # Esse método calcula o número de frutas colhidas
  pub int colher()
    for(int a = galhos; a <= 0; a = a-1)
      frutas = frutas + a * 6
    ret frutas

void toc()
  Arvore b()
  int a = b.galhos
